# collaborative-gym

./: README.md  build_package.sh  pyproject.toml  requirements.txt  test_requirements.py
collaborative_gym/: core.py
collaborative_gym/envs/: __init__.py  computer_use_env.py
collaborative_gym/envs/computer_use/: __init__.py  observation.py  utils.py
collaborative_gym/envs/computer_use/desktop_env/: desktop_env.py
collaborative_gym/envs/computer_use/desktop_env/controllers/: python.py  setup.py
collaborative_gym/envs/computer_use/desktop_env/evaluators/getters/: impress.py
collaborative_gym/envs/computer_use/desktop_env/evaluators/metrics/: chrome.py  general.py  table.py
collaborative_gym/envs/computer_use/desktop_env/providers/: __init__.py
collaborative_gym/envs/computer_use/desktop_env/providers/aws/: manager.py  provider.py  provider_with_proxy.py
collaborative_gym/envs/computer_use/desktop_env/providers/azure/: manager.py  provider.py
collaborative_gym/envs/computer_use/desktop_env/providers/docker/: manager.py  provider.py
collaborative_gym/envs/computer_use/desktop_env/providers/virtualbox/: manager.py  provider.py
collaborative_gym/envs/computer_use/desktop_env/providers/vmware/: manager.py  provider.py
collaborative_gym/envs/computer_use/desktop_env/server/: main.py
datasets/OSWorld/examples_windows/ppt/: custom.json
frontend/workbench/app/: layout.tsx
frontend/workbench/app/(session)/: layout.tsx
frontend/workbench/components/: confirmation-overlay.tsx
frontend/workbench/components/teammate/: teammate-state-window.tsx
