[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "co-gym"
version = "0.1.5"
description = "Framework and toolkits for building and evaluating collaborative agents that can work together with humans"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [
    {name = "Yijia Shao", email = "shaoyj@stanford.edu"},
    {name = "Vinay Samuel", email = "vsamuel@umd.edu"}
]
maintainers = [
    {name = "Yijia Shao", email = "shaoyj@stanford.edu"},
    {name = "Vinay Samuel", email = "vsamuel@umd.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["collaborative-ai", "multi-agent", "human-ai-collaboration", "reinforcement-learning"]
requires-python = ">=3.11"
dependencies = [
    "pyautogen==0.3.2",
    "httpx>=0.25.0,<0.28.0",
    "litellm>=1.75.7",
    "knowledge-storm>=0.2.8",
    "rstr",
    "gymnasium",
    "prompt-toolkit",
    "websocket-client>=1.7.0",
    "jupyter",
    "aact>=0.0.10",
    "typer",
    "pydantic>=2.8.0,<3.0.0",
    "fastapi",
    "docker",
    "pygments",
    "datasets",
    "scikit-learn",
    "PyPDF2",
    "uvicorn[standard]",
    "arxiv",
    "googlemaps",
    "voyageai",
    "python-multipart",
    "anthropic",
    "apscheduler",
    # Computer Use Environment dependencies
    "playwright>=1.55.0",
    "pydrive>=1.3.1",
    "rapidfuzz>=3.14.0",
    "beautifulsoup4>=4.14.0",
    "pymupdf>=1.26.0",
    "imagehash>=4.3.0",
    "scikit-image>=0.25.0",
    "openpyxl>=3.1.0",
    "python-xlib>=0.33",
    "flask>=3.1.0",
    "borb>=3.0.0",
    "opencv-python-headless>=4.11.0,<4.12.0",
    "formulas>=1.3.0",
    "easyocr>=1.7.0",
    "python-docx>=1.2.0",
    "odfpy>=1.4.0",
    "pdfplumber>=0.11.0",
    "mutagen>=1.47.0",
    "pypdf>=6.1.0",
    "python-pptx>=1.0.0",
    "pyacoustid>=1.3.0",
    "librosa>=0.11.0",
    "fastdtw>=0.3.4",
    "cssselect>=1.3.0",
    "xmltodict>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0", 
    "flake8>=4.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://cogym.saltlab.stanford.edu/"
Repository = "https://github.com/SALT-NLP/collaborative-gym"
Documentation = "https://cogym.saltlab.stanford.edu/"
"Bug Tracker" = "https://github.com/SALT-NLP/collaborative-gym/issues"

[project.scripts]
co-gym = "collaborative_gym.command:main"

[tool.setuptools.packages.find]
include = ["collaborative_gym*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
collaborative_gym = ["*.json", "*.yaml", "*.yml", "*.toml"]